--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "flowbite": "^2.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-floating-whatsapp": "^5.0.8",
     "tailwindcss": "^3.4.17"
   }
 }
