--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "astro": "^5.1.2",
+    "emailjs-com": "^3.2.0",
     "flowbite": "^2.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
